- Bugfix:  Fix autoconf autodetect bugs re uinput plugin.
- Feature: If autodetection of uinput fails, configure now has a
           --disable-uinput override.  
- Feature: WIP should now compile and run on Linux, MacOSX, and Solaris (v10+).
	   Only Linux and Solaris have been tested.
- Debug:   Add more debugging to plugin loader.
- Debug:   Log build date,OS and GCC version.
- Feature: Plugin loader will now use DEEP_BIND if available, hopefully
	   resolving conflicts on OS's that support it.
- Feature: Solaris support.  Requires some end-user changes to the usb
	   stack at the moment.  Documentation coming soon.
- BugFix:  Plugin loader is now much more robust.
- Feature: Add OS specific documentation for Linux and FreeBSD.
	   Compilation and use on FreeBSD is completely untested.
- Feature: Debug verbosity of g15daemon_log is now variable.
- Feature: Plugin filenames are now cached in g15daemon.conf to allow
	   (manual, at this stage) changing of load-order.
- Portability: Add our own daemon() function if platform doesn't have native
	   support.
- TidyUp:  Wrap keyboard read function.
- TidyUp:  Make all plugin-internal functions static.
- Portability: Remove mutexes on Solaris, as libusb (and therefore libg15)
	   blocks on read.
- Optimisation: Use pthread conditional variable to signal LCD state change.
	   Further reduces unnecessary wakeups.
1.9.5
- Add example udev helper scripts to contrib directory.
- API:	  Add NEVER_SELECT cmd to client API to enforce non-display on
	  client-switch.  Used by G15Macro if available.
- Debug:  Add segfault handler to libg15daemon_client to aid debugging
	  clients.
- Feature: Add screendump ability.  Pressing M1+M3 simultaneously will write
	  a pbm format image of the currently displayed screen to 
	  /tmp/g15daemon-sc-?.pbm, where ? is an incremental number.
- BugFix: Only wakeup display thread if LCD buffer is visible.
- Packaging: Fix debian packaging to include plugins.