@@ -160,3 +160,6 @@ allow clients use of all 'L' keys.
 	  /tmp/g15daemon-sc-?.pbm, where ? is an incremental number.
 - BugFix: Only wakeup display thread if LCD buffer is visible.
 - Packaging: Fix debian packaging to include plugins.
+SVN: (1.9.6)
+- BugFix: If lcd refresh is requested whilst processing, refreshes were missed.
+- Optimisation: The delay between screen updates is no longer required. remove.
